...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/amplitudeSettingsTitleText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/amplitudeSettingsActivityDescriptionText" />


...
        app:srcCompat="@drawable/divider_horizontal"
        android:layout_below="@+id/amplitudeSettingsActivityDescriptionText"
        android:id="@+id/amplitudeSettingsActivitySplitter" />

    <Button
...
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:id="@+id/bRecordAmplitude"
        android:layout_below="@+id/amplitudeSettingsActivitySplitter"
        android:layout_alignParentLeft="true"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bRecordAmplitudeSubText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:id="@+id/bConfigAmplitude"
        android:layout_below="@+id/bRecordAmplitude"
        android:layout_alignParentLeft="true"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bConfigAmplitudeSubText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bDoneAmplitude"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bDoneAmplitudeSubText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/thresholdTextView"
        android:layout_above="@+id/seekBar_threshold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
...
        android:layout_toRightOf="@+id/thresholdTextView"
        android:layout_toEndOf="@+id/thresholdTextView"
        android:id="@+id/text_current" />

    <SeekBar
...
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/seekBar_threshold"
        android:layout_above="@+id/maxTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
...
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/seekBar_max"
        android:layout_above="@+id/amplitude_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
...
        android:layout_toRightOf="@+id/maxTextView"
        android:layout_toEndOf="@+id/maxTextView"
        android:id="@+id/text_max" />

    <ProgressBar
...
                app:srcCompat="@drawable/ic_microphone"
                android:layout_centerInParent="true"
                android:id="@+id/imageMic" />
    </RelativeLayout>

...
