...
        android:layout_marginTop="@dimen/spacing_option_settings"
        android:text="@string/settings_amplitude_button"
        android:textAllCaps="false"
        android:gravity="top|start"
        android:textSize="16sp"
        android:textStyle="normal"
        android:id="@+id/bAmplitude_settings"/>

    <TextView
        android:text="@string/settings_amplitude_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
...
